--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       background-color: black;
     }
   </style>
-  <script type="module" crossorigin src="/latest/js-dos.js"></script>
-  <link rel="stylesheet" crossorigin href="/latest/js-dos.css">
+  <script type="module" crossorigin src="latest/js-dos.js"></script>
+  <link rel="stylesheet" crossorigin href="latest/js-dos.css">
 </head>
 <body>
   <div id="app"></div>
@@ -68,7 +68,7 @@ scaler=none
 
 [autoexec]
 @echo off
-DOOM.EXE
+FDOOM.EXE
         `,
       });
     });
