--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>js-dos 8.xx</title>
+  <title>Doom</title>
   <style>
     html,
     body {
@@ -12,8 +12,8 @@
       height: 100%;
     }
   </style>
-  <script type="module" crossorigin src="/latest/js-dos.js"></script>
-  <link rel="stylesheet" crossorigin href="/latest/js-dos.css">
+  <script type="module" crossorigin src="js-dos.js"></script>
+  <link rel="stylesheet" crossorigin href="js-dos.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
           // autoStart: true,
           // kiosk: true,
           // background: "https://dos.zone/images/http/original/2X/f/f833b147609640191342f555d70eb07261f53c03.png/0a94af564ab81a14a27d6a67671e5416.webp",
-          pathPrefix: "/emulators/",
+          pathPrefix: "emulators/",
           ipxBackend: params.get("ipxBackend"),
           room: params.get("room"),
           // ipx: [{
