--- a/index.html
+++ b/index.html
@@ -19,52 +19,13 @@
 <body>
   <div id="app"></div>
   <script>
-    const params = new URLSearchParams(location.search);
-    document.addEventListener("DOMContentLoaded", () => {
-      /* eslint-disable max-len */
-      /* eslint-enable max-len */
-      const props = Dos(document.getElementById("app"),
-        {
-          // url: "https://cdn.dos.zone/custom/dos/QB45.jsdos", // qbasic
-          // url: decodeURIComponent("https%3A%2F%2Fcdn.dos.zone%2Fcustom%2Fdos%2Fdoom_dm.jsdos"),
-          // url: decodeURIComponent("https%3A%2F%2Fcdn.dos.zone%2Fcustom%2Fdos%2Fhomm2_netbios.jsdos"),
-          // url: "https://cdn.dos.zone/original/2X/2/24b00b14f118580763440ecaddcc948f8cb94f14.jsdos", // digger
-          // url: "https://cdn.dos.zone/custom/dos/doom.jsdos",
-          // url: "https://cdn.dos.zone/custom/dos/duke3d_ipx.jsdos",
-          // url: "https://br.cdn.dos.zone/ipx/duke3d/duke3d_ipx.jsdos",
-          // url: "https://br.cdn.dos.zone/ipx/doom_dm/doom_dm.jsdos",
-          // url: "https://cdn.dos.zone/original/2X/b/b4b5275904d86a4ab8a20917b2b7e34f0df47bf7.jsdos", // dhry2
-          // url: "https://cdn.dos.zone/original/2X/7/744842062905f72648a4d492ccc2526d039b3702.jsdos", // sim-city
-          // url: "https://cdn.dos.zone/custom/dos/war2.jsdos", // warcraft-2
-          // url: "https://cdn.dos.zone/original/2X/5/5f21f221e023bbca253396824c5f652438eeef8c.jsdos", // поле чудес
-          // url: "https://cdn.dos.zone/custom/dos/homm_2.jsdos",
-          // dosboxConf: `
-          //   [autoexec]
-          //   mount c .
-          //   c:
-          // `,
-          // jsdosConf: {
-          //   "layersConfig": {
-          //     "version": 2,
-          //     "layers": [
-          //       {
-          //         "grid": "honeycomb",
-          //         "title": "Layer#0",
-          //         "controls": [
-          //           {
-          //             "row": 0,
-          //             "column": 0,
-          //             "symbol": "↑",
-          //             "type": "Key",
-          //             "mapTo": [
-          //               265
-          //             ]
-          //           }
-          //         ]
-          //       }
-          //     ]
-          //   }
-          // },
+    
+   document.addEventListener("DOMContentLoaded", () => {
+    const props = Dos(document.getElementById("app"), {
+        url: "/doom.jsdos", // Path to your uploaded DOOM package
+        autoStart: true
+    });
+});
           // dosboxConf: diabloConf,
           // loginUrl: "http://localhost:8080/subscription.html",
           // autoStart: true,
