--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
    document.addEventListener("DOMContentLoaded", () => {
     const props = Dos(document.getElementById("app"), {
-        url: "/doom.jsdos", // Path to your uploaded DOOM package
+        url: "doom.jsdos", // Path to your uploaded DOOM package
         autoStart: true
     });
 });
