--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ scaler=none
     <script>
   document.addEventListener("DOMContentLoaded", () => {
     const props = Dos(document.getElementById("app"), {
-      url: "jjminecraftguy.github.io/Doom/doom.jsdos", // Make sure doom.jsdos is in the same directory as your HTML file
+      url: "/Doom/doom.jsdos", // Make sure doom.jsdos is in the same directory as your HTML file
       pathPrefix: "emulators/",
       autoStart: true, // Ensures automatic startup
       kiosk: true, // Optional: Makes it full screen without UI
